gitops-kube-config/opscd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: opscd
  namespace: prod
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: opscd
  type: ClusterIP
