gitops-kube-config/opscd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: opscd
  namespace: prod
spec:
  gateways:
  - ops-gateway
  hosts:
  - 'opscd.istio.gome.inc'
  http:
   - route:
     - destination:
        host: opscd
        port:
          number: 8001
